--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 
 <!-- about 06:46:13 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/about.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:11 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/about.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:11 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -67,7 +67,7 @@
                     <p><span class="icon-music"></span>We have Answers</p>
                     <ul>
                         <li>022-40166421</li>
-                        <li>info@bnpinteriors.com</li>
+                        <li>info@Bonanza Infrainteriors.com</li>
                         <li>Mon - Sat: 9am to 6pm</li>
                     </ul>
                 </div>
@@ -569,7 +569,7 @@
                                                
                                         <p><a href="mailto:kanaram@bonanzainfra.com" class="text-muted">kanaram@bonanzainfra.com</a><br></p>
                                        
-                                        <!-- <p>ajaymasand@bnpinteriors.com </p> -->
+                                        <!-- <p>ajaymasand@Bonanza Infrainteriors.com </p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -638,5 +638,5 @@
 
 <!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
