--- a/client.html
+++ b/client.html
@@ -4,11 +4,11 @@
 
 <!-- about 06:46:13 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/client.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:35:28 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/client.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:35:28 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
-    <title>Clients | BNP Interior</title>
+    <title>Clients | Bonanza Infra Interior</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,7 +47,7 @@
                     <p><span class="icon-music"></span>We have Answers</p>
                     <ul>
                         <li>022-40166421</li>
-                        <li>info@bnpinteriors.com</li>
+                        <li>info@Bonanza Infrainteriors.com</li>
                         <li>Mon - Sat: 9am to 6pm</li>
                     </ul>
                 </div>
@@ -527,7 +527,7 @@
                                                
                                         <p><a href="mailto:kanaram@bonanzainfra.com" class="text-muted">kanaram@bonanzainfra.com</a><br></p>
                                        
-                                        <!-- <p>ajaymasand@bnpinteriors.com </p> -->
+                                        <!-- <p>ajaymasand@Bonanza Infrainteriors.com </p> -->
                                         </div>
                                     </div>
                                 </div>
