--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <!-- about 06:46:13 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:17 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:17 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
@@ -46,7 +46,7 @@
                     <p><span class="icon-music"></span>We have Answers</p>
                     <ul>
                         <li>022-40166421</li>
-                        <li>info@bnpinteriors.com</li>
+                        <li>info@Bonanza Infrainteriors.com</li>
                         <li>Mon - Sat: 9am to 6pm</li>
                     </ul>
                 </div>
@@ -152,7 +152,7 @@
                                 <span>Leave your information here and get reply from our expert at the earliest.</span>
                             </div>
                             <div class="appointment">
-                                 <form class="appointment-form" method="POST" action="http://bnpinteriors.com/contact.php">
+                                 <form class="appointment-form" method="POST" action="http://Bonanza Infrainteriors.com/contact.php">
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div class="single-box">
@@ -228,7 +228,7 @@
                                 <span>Leave your information here and get reply from our expert at the earliest.</span>
                             </div>
                                <div class="appointment">
-                                 <form class="appointment-form" method="POST" action="http://bnpinteriors.com/contact.php">
+                                 <form class="appointment-form" method="POST" action="http://Bonanza Infrainteriors.com/contact.php">
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div class="single-box">
@@ -417,7 +417,7 @@
                                                
                                         <p><a href="mailto:kanaram@bonanzainfra.com" class="text-muted">kanaram@bonanzainfra.com</a><br></p>
                                        
-                                        <!-- <p>ajaymasand@bnpinteriors.com </p> -->
+                                        <!-- <p>ajaymasand@Bonanza Infrainteriors.com </p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -486,5 +486,5 @@
 
 <!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
