--- a/services.html
+++ b/services.html
@@ -4,11 +4,11 @@
 
 <!-- about 06:46:13 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/services.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:14 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/services.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:14 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
-    <title>Services | BNP Interior</title>
+    <title>Services | Bonanza Infra Interior</title>
 
     <!-- responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -347,7 +347,7 @@
                                                
                                         <p><a href="mailto:kanaram@bonanzainfra.com" class="text-muted">kanaram@bonanzainfra.com</a><br></p>
                                        
-                                        <!-- <p>ajaymasand@bnpinteriors.com </p> -->
+                                        <!-- <p>ajaymasand@Bonanza Infrainteriors.com </p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -416,5 +416,5 @@
 
 <!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
