--- a/commercial.html
+++ b/commercial.html
@@ -2,11 +2,11 @@
 <html lang="en">
    <!-- about 06:46:13 GMT -->
    
-<!-- Mirrored from bnpinteriors.com/commercial.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:21:22 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/commercial.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:21:22 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
       <meta charset="UTF-8">
-      <title>Commercial Projects | BNP Interior </title>
+      <title>Commercial Projects | Bonanza Infra Interior </title>
       <!-- responsive meta -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- For IE -->
@@ -88,7 +88,7 @@
                     <p><span class="icon-music"></span>We have Answers</p>
                     <ul>
                         <li>022-40166421</li>
-                        <li>info@bnpinteriors.com</li>
+                        <li>info@Bonanza Infrainteriors.com</li>
                         <li>Mon - Sat: 9am to 6pm</li>
                     </ul>
                 </div>
@@ -1290,7 +1290,7 @@
                                                
                                         <p><a href="mailto:kanaram@bonanzainfra.com" class="text-muted">kanaram@bonanzainfra.com</a><br></p>
                                        
-                                        <!-- <p>ajaymasand@bnpinteriors.com </p> -->
+                                        <!-- <p>ajaymasand@Bonanza Infrainteriors.com </p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -1359,5 +1359,5 @@
 
 <!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
