--- a/retail.html
+++ b/retail.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <!-- about 06:46:13 GMT -->
    
-<!-- Mirrored from bnpinteriors.com/retail.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:31:07 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/retail.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:31:07 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <head>
       <meta charset="UTF-8">
@@ -86,7 +86,7 @@
                     <p><span class="icon-music"></span>We have Answers</p>
                     <ul>
                         <li>022-40166421</li>
-                        <li>info@bnpinteriors.com</li>
+                        <li>info@Bonanza Infrainteriors.com</li>
                         <li>Mon - Sat: 9am to 6pm</li>
                     </ul>
                 </div>
@@ -1470,7 +1470,7 @@
                                                
                                         <p><a href="mailto:kanaram@bonanzainfra.com" class="text-muted">kanaram@bonanzainfra.com</a><br></p>
                                        
-                                        <!-- <p>ajaymasand@bnpinteriors.com </p> -->
+                                        <!-- <p>ajaymasand@Bonanza Infrainteriors.com </p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -1539,5 +1539,5 @@
 
 <!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from bnpinteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
+<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
