--- a/index-2.html
+++ b/index-2.html
@@ -89,7 +89,7 @@
         <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 
-                <div class="carousel-item active slide-2" style="background-image: url(images/sliderBonanza Infra/commercial.jpg);">
+                <div class="carousel-item active slide-2" style="background-image: url(images/sliderbnp/commercial.jpg);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
 
-                     <div class="carousel-item slide-2" style="background-image: url(images/sliderBonanza Infra/2.jpg);">
+                     <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//2.jpg);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                   <div class="carousel-item  slide-2" style="background-image: url(images/sliderBonanza Infra/hospitality.jpg);">
+                   <div class="carousel-item  slide-2" style="background-image: url(images/sliderbnp/);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -139,7 +139,7 @@
                 </div>
 
 
-                <div class="carousel-item slide-2" style="background-image: url(images/sliderBonanza Infra/banking.jpg);">
+                <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//banking.jpg);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -160,7 +160,7 @@
                  </div>
 
 
-                    <div class="carousel-item slide-2" style="background-image: url(images/sliderBonanza Infra/it.jpg);">
+                    <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//it.jpg);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -179,7 +179,7 @@
                 </div>
 
 
-                <div class="carousel-item slide-2" style="background-image: url(images/sliderBonanza Infra/retail.jpg);">
+                <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//retail.jpg);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -221,7 +221,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/sliderBonanza Infra/commercial-sm.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/sliderbnp//commercial-sm.jpg" alt="First slide">
 
        <div class="carousel-caption d-block d-sm-none">
                         <div class="container">
@@ -239,7 +239,7 @@
 
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderBonanza Infra/2-sm.jpg" alt="Second slide">
+      <img class="d-block w-100" src="images/sliderbnp//2-sm.jpg" alt="Second slide">
       <div class="carousel-caption d-block d-sm-none">
                         <div class="container">
                                 <div class="content text-center">
@@ -253,7 +253,7 @@
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderBonanza Infra/banking-sm.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/sliderbnp//banking-sm.jpg" alt="Third slide">
       <div class="carousel-caption d-block d-sm-none">
         <div class="container">
             <div class="content text-center">
@@ -268,7 +268,7 @@
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderBonanza Infra/it-sm.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/sliderbnp//it-sm.jpg" alt="Third slide">
 
       <div class="carousel-caption d-block d-sm-none">
         <div class="container">
@@ -287,7 +287,7 @@
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderBonanza Infra/retail-sm.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/sliderbnp//retail-sm.jpg" alt="Third slide">
 
       <div class="carousel-caption d-block d-sm-none">
         <div class="container">
