--- a/about.html
+++ b/about.html
@@ -2,10 +2,7 @@
 <html lang="en">
 
 
-<!-- about 06:46:13 GMT -->
-
-<!-- Mirrored from Bonanza Infrainteriors.com/about.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:11 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="UTF-8">
     <title>About | BONANZA INFRA</title>
@@ -636,8 +633,4 @@
 
 </body>
 
-
-<!-- about 06:46:46 GMT -->
-
-<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
