--- a/client.html
+++ b/client.html
@@ -2,10 +2,7 @@
 <html lang="en">
 
 
-<!-- about 06:46:13 GMT -->
-
-<!-- Mirrored from Bonanza Infrainteriors.com/client.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:35:28 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="UTF-8">
     <title>Clients | Bonanza Infra Interior</title>
