--- a/commercial.html
+++ b/commercial.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- about 06:46:13 GMT -->
-   
-<!-- Mirrored from Bonanza Infrainteriors.com/commercial.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:21:22 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
       <meta charset="UTF-8">
       <title>Commercial Projects | Bonanza Infra Interior </title>
@@ -515,7 +512,4 @@
 </body>
 
 
-<!-- about 06:46:46 GMT -->
-
-<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
