--- a/index-2.html
+++ b/index-2.html
@@ -2,10 +2,7 @@
 <html lang="en">
 
 
-<!-- index 06:41:43 GMT -->
-
-<!-- Mirrored from Bonanza Infrainteriors.com/index.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:11 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="UTF-8">
     <title>BONANZA INFRA - An Official Website </title>
