--- a/retail.html
+++ b/retail.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- about 06:46:13 GMT -->
-   
-<!-- Mirrored from Bonanza Infrainteriors.com/retail.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:31:07 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
       <meta charset="UTF-8">
-      <title>Retail | BONANZA INFRA</title>
+      <title>BKC Mumbai| BONANZA INFRA</title>
       <!-- responsive meta -->
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- For IE -->
@@ -665,7 +662,5 @@
 </body>
 
 
-<!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
