--- a/services.html
+++ b/services.html
@@ -2,10 +2,7 @@
 <html lang="en">
 
 
-<!-- about 06:46:13 GMT -->
-
-<!-- Mirrored from Bonanza Infrainteriors.com/services.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:15:14 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
     <meta charset="UTF-8">
     <title>Services | Bonanza Infra Interior</title>
@@ -415,7 +412,5 @@
 </body>
 
 
-<!-- about 06:46:46 GMT -->
 
-<!-- Mirrored from Bonanza Infrainteriors.com/contact.php by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 12 Jun 2022 11:39:21 GMT -->
 </html>
