--- a/index-2.html
+++ b/index-2.html
@@ -37,7 +37,7 @@
             <div class="inner-container clearfix">
                 <div class="logo-box-style2 float-left">
                     <a href="index-2.html">
-                        <img style="height: 70px;width:50px;" src="images/logo.png" alt="Awesome Logo">
+                        <img style="height: 40px;width:35px;" src="images/logo.png" alt="Awesome Logo">
                         <h6 style="color:white;">BONANZA INFRA</h6>
                     </a>
                 </div>
@@ -87,7 +87,7 @@
         <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 
-                <div class="carousel-item active slide-2" style="background-image: url(images/sliderbnp/1.png);">
+                <div class="carousel-item active slide-2" style="background-image: url(images/sliderbonanza/1.png);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -103,7 +103,7 @@
                     </div>
                 </div>
 
-                     <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//2.png);">
+                     <div class="carousel-item slide-2" style="background-image: url(images/sliderbonanza//2.png);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -118,7 +118,7 @@
                     </div>
                 </div>
 
-                   <div class="carousel-item  slide-2" style="background-image: url(images/sliderbnp/3.png);">
+                   <div class="carousel-item  slide-2" style="background-image: url(images/sliderbonanza/3.png);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -137,7 +137,7 @@
                 </div>
 
 
-                <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//5.png);">
+                <div class="carousel-item slide-2" style="background-image: url(images/sliderbonanza//5.png);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -158,7 +158,7 @@
                  </div>
 
 
-                    <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//4.png);">
+                    <div class="carousel-item slide-2" style="background-image: url(images/sliderbonanza//4.png);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -177,7 +177,7 @@
                 </div>
 
 
-                <div class="carousel-item slide-2" style="background-image: url(images/sliderbnp//retail.jpg);">
+                <div class="carousel-item slide-2" style="background-image: url(images/sliderbonanza//retail.jpg);">
                     <div class="carousel-caption">
                         <div class="container">
                             <div class="box valign-middle">
@@ -219,7 +219,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/sliderbnp//1.png" alt="First slide">
+      <img class="d-block w-100" src="images/sliderbonanza//1.png" alt="First slide">
 
        <div class="carousel-caption d-block d-sm-none">
                         <div class="container">
@@ -237,7 +237,7 @@
 
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderbnp//2.png" alt="Second slide">
+      <img class="d-block w-100" src="images/sliderbonanza//2.png" alt="Second slide">
       <div class="carousel-caption d-block d-sm-none">
                         <div class="container">
                                 <div class="content text-center">
@@ -251,7 +251,7 @@
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderbnp//3.png" alt="Third slide">
+      <img class="d-block w-100" src="images/sliderbonanza//3.png" alt="Third slide">
       <div class="carousel-caption d-block d-sm-none">
         <div class="container">
             <div class="content text-center">
@@ -266,7 +266,7 @@
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderbnp//4.png" alt="Third slide">
+      <img class="d-block w-100" src="images/sliderbonanza//4.png" alt="Third slide">
 
       <div class="carousel-caption d-block d-sm-none">
         <div class="container">
@@ -285,7 +285,7 @@
     </div>
 
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sliderbnp//5.png" alt="Third slide">
+      <img class="d-block w-100" src="images/sliderbonanza//5.png" alt="Third slide">
 
       <div class="carousel-caption d-block d-sm-none">
         <div class="container">
