--- a/about.html
+++ b/about.html
@@ -39,14 +39,14 @@
         font-size: 25px;
         margin: 5px;
         padding: 7px 14px;
-        background: #033500;
+        background: #033500 ;
         display: inline-block;
         cursor: pointer;
         border-radius: 3px;
         }
 
        .owl-theme .owl-nav [class*='owl-']:hover {
-        background: #033500;
+        background: #033500 ;
         color: #FFF;
         text-decoration: none;
     }
@@ -79,12 +79,11 @@
             </div>
         </section> -->
         <!-- End Top Bar style2 -->  <!--Start Main Header-->
-        <header class="main-header header-style2 stricky bg-dark">
-            <div class="inner-container clearfix">
+        <header class="main-header header-style2 stricky " style="background-image: url(images/resources/aboutbg3.png);">
+            <div class="inner-container">
                 <div class="logo-box-style2 float-left">
-                    <a href="index-2.html">
-                        <img style="height: 40px;width:35px;" src="images/logo.png" alt="Awesome Logo">
-                        <h6 style="color:white;">BONANZA INFRA</h6>
+                    <a href="index.html">
+                        <img style="height: 60px;width:45px;" src="images/logo.png" alt="Awesome Logo">
                     </a>
                 </div>
                 <div class="main-menu-box float-right">
@@ -129,22 +128,7 @@
         </header>
         <!--End Main Header-->
         <!--Start breadcrumb area-->
-        <section class="breadcrumb-area" style="background-image: url(images/resources/aboutbg3.png);">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <div class="inner-content clearfix">
-                            <!-- <div class="breadcrumb-menu float-right">
-                                <ul class="clearfix">
-                                    <li><a href="index.php">Home</a></li>
-                                    <li class="active">About Us</li>
-                                </ul>
-                            </div> -->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+      
         <!--End breadcrumb area-->
 
         <!--Start About Style2 Area-->
