--- a/commercial.html
+++ b/commercial.html
@@ -31,12 +31,11 @@
    <body>
       <div class="boxed_wrapper">
            <!--Start Main Header-->
-           <header class="main-header header-style2 stricky bg-dark">
-            <div class="inner-container clearfix">
+           <header class="main-header header-style2 stricky " style="background-image: url(images/resources/aboutbg3.png);">
+            <div class="inner-container">
                 <div class="logo-box-style2 float-left">
                     <a href="index-2.html">
-                     <img style="height: 40px;width:35px;" src="images/logo.png" alt="Awesome Logo">
-                     <h6 style="color:white;">BONANZA INFRA</h6>
+                     <img style="height: 60px;width:45px;" src="images/logo.png" alt="Awesome Logo">
                     </a>
                 </div>
                 <div class="main-menu-box float-right">
