--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
 
           <button class="flex-c-m s1-txt4 size3 how-btn trans-04 where1">
-            Get Updates
+            for Call Back
           </button>
         </form>
       </div>
