--- a/about.html
+++ b/about.html
@@ -576,7 +576,7 @@
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                         <div class="copyright-text text-center">
-                            <p><a href="#" target="_blank">Copyright 2022 | All Right Reserved  | Designed By <a href="tel:7715969921" target="_blank">Vitorscape</a></p>
+                            <p><a href="#" target="_blank">Copyright 2022 | Bonanza Infra | All Right Reserved</a></p>
                         </div>
                     </div>
                 </div>
