--- a/about.html
+++ b/about.html
@@ -39,14 +39,14 @@
         font-size: 25px;
         margin: 5px;
         padding: 7px 14px;
-        background: #033500 ;
+        background: #007230 ;
         display: inline-block;
         cursor: pointer;
         border-radius: 3px;
         }
 
        .owl-theme .owl-nav [class*='owl-']:hover {
-        background: #033500 ;
+        background: #007230 ;
         color: #FFF;
         text-decoration: none;
     }
@@ -102,9 +102,9 @@
                                 <li><a href="services.html">Services</a></li>
                                 <li class="dropdown"><a href="#">Projects</a>
                                     <ul>
+                                       <li><a href="recent work.html">Recent Work</a></li>
                                         <li><a href="hospitality.html">Hospitality</a></li>
                                         <li><a href="commercial.html">Commercial</a></li>
-                                         
                                         <li><a href="banking.html">Banking</a></li>
                                         <li><a href="it.html">SM Express</a></li>
                                         <li><a href="retail.html">BKC Mumbai</a></li>
