--- a/contact.html
+++ b/contact.html
@@ -81,9 +81,9 @@
                                 <li><a href="services.html">Services</a></li>
                                 <li class="dropdown"><a href="#">Projects</a>
                                     <ul>
+                                       <li><a href="recent work.html">Recent Work</a></li>
                                         <li><a href="hospitality.html">Hospitality</a></li>
                                         <li><a href="commercial.html">Commercial</a></li>
-                                         
                                         <li><a href="banking.html">Banking</a></li>
                                         <li><a href="it.html">SM Express</a></li>
                                         <li><a href="retail.html">BKC Mumbai</a></li>
