--- a/client.html
+++ b/client.html
@@ -87,6 +87,7 @@
                                         <li><a href="commercial.html">Commercial</a></li>
                                         <li><a href="banking.html">Banking</a></li>
                                         <li><a href="it.html">SM Express</a></li>
+                                         <li><a href="digient.html">Digient Technologies</a></li>
                                         <li><a href="retail.html">BKC Mumbai</a></li>
                                     </ul>
                                 </li>
