--- a/hospitality.html
+++ b/hospitality.html
@@ -61,7 +61,7 @@
                                         <ul>
                                             <li><a href="hospitality.html">Hospitality</a></li>
                                             <li><a href="commercial.html">Commercial</a></li>
-                                             
+                                            <li><a href="digient.html">Digient Technologies</a></li>
                                             <li><a href="banking.html">Banking</a></li>
                                             <li><a href="it.html">SM Express</a></li>
                                             <li><a href="retail.html">BKC Mumbai</a></li>
